--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -3669,6 +3669,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22F5C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17134.1967]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=91BD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=17CEC
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BC38
+DefPolicyCode.x64=CDefPolicy_Query_edi_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2328C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.17723.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=75D91
@@ -6435,6 +6449,16 @@ bRemoteConnAllowed.x64=F2434
 bMultimonAllowed.x64  =F2438
 ulMaxDebugSessions.x64=F243C
 bFUSEnabled.x64       =F2440
+
+[10.0.17134.1967-SLInit]
+bServerSku.x64        =F0378
+lMaxUserSessions.x64  =F037C
+bAppServerAllowed.x64 =F0380
+bInitialized.x64      =F1430
+bRemoteConnAllowed.x64=F1434
+bMultimonAllowed.x64  =F1438
+ulMaxDebugSessions.x64=F143C
+bFUSEnabled.x64       =F1440
 
 [10.0.17723.1000-SLInit]
 bInitialized.x64      =E9AB0
