add support for termsrv.dll 10.0.14393.4169 (x86)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-02-06
+Updated=2021-03-14
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1921,15 +1921,27 @@ SLInitOffset.x64=22C80
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14393.4169]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5B28
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8CE51
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=398BC
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=25FA4
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3C009
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=29825
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=3F752
+SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=CA40
 SLInitFunc.x64=New_CSLQuery_Initialize
@@ -5174,6 +5186,15 @@ ulMaxDebugSessions.x64=E847C
 bFUSEnabled.x64       =E8480
 
 [10.0.14393.4169-SLInit]
+bInitialized.x86      =C1F94
+bServerSku.x86        =C1F98
+lMaxUserSessions.x86  =C1F9C
+bAppServerAllowed.x86 =C1FA0
+bRemoteConnAllowed.x86=C1FA4
+bMultimonAllowed.x86  =C1FA8
+ulMaxDebugSessions.x86=C1FAC
+bFUSEnabled.x86       =C1FB0
+
 bServerSku.x64        =E63D0
 lMaxUserSessions.x64  =E63D4
 bAppServerAllowed.x64 =E63D8
