--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -4247,6 +4247,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1D5BC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.964]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89F31
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E29C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -6879,5 +6893,15 @@ bRemoteConnAllowed.x64=106040
 bMultimonAllowed.x64  =106044
 ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
+
+[10.0.19041.964-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
 
 
