add support termsrv.dll v10.0.19041.964 (x86 and x64)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-03-14
+Updated=2021-04-29
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4248,15 +4248,27 @@ SLInitOffset.x64=1D5BC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19041.964]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B65C9
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=89F31
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BD35
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=0CA4C
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E8A9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=18A15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=687F8
+SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=1E29C
 SLInitFunc.x64=New_CSLQuery_Initialize
@@ -6895,6 +6907,15 @@ ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
 
 [10.0.19041.964-SLInit]
+bInitialized.x86      =D1A04
+bServerSku.x86        =D1A08
+lMaxUserSessions.x86  =D1A0C
+bAppServerAllowed.x86 =D1A14
+bRemoteConnAllowed.x86=D1A1C
+bMultimonAllowed.x86  =D1A20
+ulMaxDebugSessions.x86=D1A24
+bFUSEnabled.x86       =D1A28
+
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
