--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-04-29
+Updated=2021-04-30
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4143,6 +4143,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.18362.1533]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=83075
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DC4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22E9C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19041.84]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B46B9
@@ -6821,6 +6835,16 @@ bRemoteConnAllowed.x86=D3790
 bMultimonAllowed.x86  =D3794
 ulMaxDebugSessions.x86=D3798
 bFUSEnabled.x86       =D379C
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64  =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64       =F6AAC
+
+[10.0.18362.1533-SLInit]
 bInitialized.x64      =F6A8C
 bServerSku.x64        =F6A90
 lMaxUserSessions.x64  =F6A94
