--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-04-30
+Updated=2021-05-27
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4144,15 +4144,27 @@ SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.18362.1533]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B67C6
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=83075
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35735
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=0DC4C
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=4D679
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=1FE65
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=5C18A
+SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
@@ -4285,6 +4297,20 @@ SLInitOffset.x86=687F8
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=1E29C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1023]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89C51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1DFDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -6845,6 +6871,14 @@ ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64       =F6AAC
 
 [10.0.18362.1533-SLInit]
+bInitialized.x86      =D377C
+bServerSku.x86        =D3780
+lMaxUserSessions.x86  =D3784
+bAppServerAllowed.x86 =D378C
+bRemoteConnAllowed.x86=D3790
+bMultimonAllowed.x86  =D3794
+ulMaxDebugSessions.x86=D3798
+bFUSEnabled.x86       =D379C
 bInitialized.x64      =F6A8C
 bServerSku.x64        =F6A90
 lMaxUserSessions.x64  =F6A94
@@ -6940,6 +6974,16 @@ bMultimonAllowed.x86  =D1A20
 ulMaxDebugSessions.x86=D1A24
 bFUSEnabled.x86       =D1A28
 
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1023-SLInit]
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
