--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-05-27
+Updated=2021-10-07
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4313,6 +4313,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=1DFDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1081]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B66B9
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89D81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BD25
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D13C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E899
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=19105
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=68809
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=1E98C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -6984,6 +7010,25 @@ ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
 
 [10.0.19041.1023-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1081-SLInit]
+bInitialized.x86      =D1A04
+bServerSku.x86        =D1A08
+lMaxUserSessions.x86  =D1A0C
+bAppServerAllowed.x86 =D1A14
+bRemoteConnAllowed.x86=D1A1C
+bMultimonAllowed.x86  =D1A20
+ulMaxDebugSessions.x86=D1A24
+bFUSEnabled.x86       =D1A28
+
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
