--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -4339,6 +4339,140 @@ SLInitHook.x64=1
 SLInitOffset.x64=1E98C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1200]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89D81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D212
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=19105
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E98C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1202]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89D81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D212
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=19105
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E98C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1319]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89A21
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E6AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1320]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89A21
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E6AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B6419
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BDE7
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E899
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=68578
+SLInitFunc.x86=New_CSLQuery_Initialize
+
+[10.0.19041.1348]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89AC1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E6AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B64A9
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BDE7
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E899
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=68578
+SLInitFunc.x86=New_CSLQuery_Initialize
+
+[10.0.19041.1379]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A021
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E95C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1387]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A021
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E95C
+SLInitFunc.x64=New_CSLQuery_Initialize
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B6899
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BDE7
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E899
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=68778
+SLInitFunc.x86=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -7037,5 +7171,99 @@ bRemoteConnAllowed.x64=107120
 bMultimonAllowed.x64  =107124
 ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
+
+[10.0.19041.1200-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1202-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1319-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1320-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+bInitialized.x86      =D1A04
+bServerSku.x86        =D1A08
+lMaxUserSessions.x86  =D1A0C
+bAppServerAllowed.x86 =D1A14
+bRemoteConnAllowed.x86=D1A1C
+bMultimonAllowed.x86  =D1A20
+ulMaxDebugSessions.x86=D1A24
+bFUSEnabled.x86       =D1A28
+
+[10.0.19041.1348-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+bInitialized.x86      =D1A04
+bServerSku.x86        =D1A08
+lMaxUserSessions.x86  =D1A0C
+bAppServerAllowed.x86 =D1A14
+bRemoteConnAllowed.x86=D1A1C
+bMultimonAllowed.x86  =D1A20
+ulMaxDebugSessions.x86=D1A24
+bFUSEnabled.x86       =D1A28
+
+[10.0.19041.1379-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1387-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+bInitialized.x86      =D1A04
+bServerSku.x86        =D1A08
+lMaxUserSessions.x86  =D1A0C
+bAppServerAllowed.x86 =D1A14
+bRemoteConnAllowed.x86=D1A1C
+bMultimonAllowed.x86  =D1A20
+ulMaxDebugSessions.x86=D1A24
+bFUSEnabled.x86       =D1A28
 
 
