--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-10-07
+Updated=2024-03-01
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4473,6 +4473,20 @@ SLInitHook.x86=1
 SLInitOffset.x86=68778
 SLInitFunc.x86=New_CSLQuery_Initialize
 
+[10.0.22621.3235]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9D3F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=17F5C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C055
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=297C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -7266,4 +7280,13 @@ bMultimonAllowed.x86  =D1A20
 ulMaxDebugSessions.x86=D1A24
 bFUSEnabled.x86       =D1A28
 
+[10.0.22621.3235-SLInit]
+bInitialized.x64      =12AF4C
+bServerSku.x64        =12AF50
+lMaxUserSessions.x64  =12AF54
+bAppServerAllowed.x64 =12AF5C
+bRemoteConnAllowed.x64=12AF64
+bMultimonAllowed.x64  =12AF68
+ulMaxDebugSessions.x64=12AF70
+bFUSEnabled.x64       =12AF74
 
